Use expressjs to serve the live video content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </style>
 <body>
    <div>
-       <video data-dashjs-player autoplay src="/stream" controls></video>
+       <video data-dashjs-player autoplay src="/api/stream/stream.mpd" controls></video>
    </div>
 </body>
